add emoges, links para redes sociais no rodapé

--- a/index.html
+++ b/index.html
@@ -27,24 +27,53 @@
 </section>
   <!-- Conteúdo Principal -->
   <main>
-    <h1>Bem-vindo à nossa plataforma de cursos acessíveis e transformadores!</h1>
+    <h1>Bem-vindo à nossa plataforma de cursos acessíveis e transformadores! 🎓</h1>
+    <p>Explore nossos cursos inclusivos e acessíveis para todos. 🌐</p> <!
     <p>Aqui, você tem a oportunidade de aprender novas habilidades de forma inclusiva, acessível e com preços que cabem no seu bolso. Nosso objetivo é proporcionar uma educação de qualidade para todos, sem barreiras, sem complicação. Seja você iniciante ou avançado, temos o curso ideal para você.</p>
     <h2>Acessibilidade é nossa prioridade!</h2>
     <p>Todos os nossos cursos são desenvolvidos pensando na inclusão, utilizando tecnologias que garantem o máximo de acessibilidade. Se você é uma pessoa com deficiência, você pode contar com um conteúdo totalmente adaptado às suas necessidades, para que você aprenda no seu próprio ritmo e sem obstáculos.</p>
-    <h2>Surpresas para você!</h2>
-    <p>Ao finalizar nossos cursos, você recebe um certificado que comprova seu aprendizado e pode ser utilizado para destacar suas habilidades no mercado de trabalho. É mais uma forma de garantir que seu esforço será reconhecido.</p>
-    
-    <h2>Ganhe dinheiro compartilhando nossos cursos!</h2>
-    <p>Você sabia que pode ganhar dinheiro se tornando um afiliado de nossa plataforma? Ao indicar nossos cursos, você recebe comissões por cada venda realizada através do seu link exclusivo. É uma oportunidade de transformar seu conhecimento em uma fonte de renda extra.</p>
+    <section class="videoaulas">
+        <h2>Videoaulas de Alta Qualidade 🎥 </h2>
+        <p>Todos os nossos cursos são oferecidos em videoaulas de alta qualidade, para garantir que você tenha a melhor experiência de aprendizado possível.</p>
+        <p>Você pode acessar as videoaulas em qualquer dispositivo: seja no seu computador, tablet ou celular. A plataforma é totalmente compatível com dispositivos móveis, permitindo que você aprenda onde quer que esteja.</p>
+        <p>Aproveite essa oportunidade de acessar conteúdos ricos, preparados com carinho para você, sem barreiras, e no seu ritmo! 🚀 </p>
+    </section>
+</main>
+<section class="surpresas">
+    <h2>🎉 Surpresas para Você!</h2> <!-- Emoji de festa -->
+    <p>Ao finalizar nossos cursos, você recebe um <strong>certificado</strong> que comprova seu aprendizado e pode ser utilizado para destacar suas habilidades no mercado de trabalho. 🏆</p> <!-- Emoji de troféu -->
+    <p>É mais uma forma de garantir que seu esforço será reconhecido. 🌟</p> <!-- Emoji de estrela -->
+</section>
 
-    <p><a href="cursos.html" class="btn">Clique aqui para conhecer nossos cursos e comece agora mesmo a investir no seu futuro!</a></p>
-  </main>
+<!-- Seção de Afiliados e Ganhos -->
+<section class="afiliados">
+    <h2>💸 Ganhe Dinheiro Compartilhando Nossos Cursos!</h2> <!-- Emoji de dinheiro -->
+    <p>Você sabia que pode ganhar dinheiro se tornando um <strong>afiliado</strong> de nossa plataforma? 🤝</p> <!-- Emoji de aperto de mão -->
+    <p>Ao indicar nossos cursos, você recebe comissões por cada venda realizada através do seu link exclusivo. 🔗</p> <!-- Emoji de link -->
+    <p>É uma oportunidade de transformar seu conhecimento em uma fonte de renda extra. 💰</p> <!-- Emoji de dinheiro -->
+    <p><a href="pagina-de-afiliados.html" class="btn-afiliado">Clique aqui para conhecer nossos cursos e se tornar um afiliado! 🚀</a></p> <!-- Link para página de afiliados com emoji de foguete -->
+</section>
 
-  <!-- Rodapé -->
-  <footer>
-    <p>&copy; 2024 Plataforma de Cursos Acessíveis. Todos os direitos reservados.</p>
-  </footer>
+<footer class="site-footer">
+  <div class="footer-container">
+      <p>Siga-nos nas redes sociais:</p>
+      <div class="social-links">
+          <a href="https://instagram.com" target="_blank" aria-label="Instagram">
+              <img src="assets/icons/instagram-icon.png" alt="Instagram">
+          </a>
+          <a href="https://tiktok.com" target="_blank" aria-label="TikTok">
+              <img src="assets/icons/tiktok-icon.png" alt="TikTok">
+          </a>
+          <a href="https://youtube.com" target="_blank" aria-label="YouTube">
+              <img src="assets/icons/youtube-icon.png" alt="YouTube">
+          </a>
+      </div>
+      <p class="copyright">© 2024 Cursos Acessíveis. Todos os direitos reservados.</p>
+  </div>
+</footer>
 
-  <script src="assets/js/main.js"></script>
+
+<script src="assets/js/main.js"></script>
+
 </body>
 </html>
