página de cursos aprimorada, criacao de uma pasta para armazenar cursos e seus arquivos

--- a/cursos.html
+++ b/cursos.html
@@ -27,10 +27,15 @@
     <!-- Lista de Cursos -->
     <section class="cursos-disponiveis">
       <h2>📋 Lista de Cursos</h2>
+
+      <!-- Curso 1 -->
       <div class="curso">
         <h3>🎥 Produção e Edição de Vídeo para Pessoas com Deficiência Visual</h3>
         <p>Aprenda técnicas práticas de produção e edição de vídeos, com foco em softwares acessíveis e processos adaptados. Ideal para quem deseja criar conteúdos de impacto no mundo digital!</p>
+        <a href="cursos/producao_e_edicao_de_videos_para_deficientes_visuais/index.html" class="btn-detalhes">Saiba Mais</a>
       </div>
+
+      <!-- Curso 2 -->
       <div class="curso">
         <h3>📄 Dominando o Word com NVDA</h3>
         <p>Descubra como usar o Microsoft Word ao máximo com o leitor de telas NVDA. Este curso é perfeito para estudantes e profissionais que buscam autonomia em suas atividades cotidianas!</p>
