add biblioteca de icones, melhorias na página detalhe cursos, afiliados

--- a/afiliados.html
+++ b/afiliados.html
@@ -5,83 +5,88 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Afiliados - Plataforma de Cursos Acessíveis</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-  <!-- Menu Persistente -->
+  <!-- Menu Superior -->
   <header>
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="cursos.html">Cursos</a></li>
-        <li><a href="afiliados.html">Afiliados</a></li>
-        <li><a href="contato.html">Contato</a></li>
+      <ul class="menu">
+        <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+        <li><a href="cursos.html"><i class="fas fa-book"></i> Cursos</a></li>
+        <li><a href="afiliados.html"><i class="fas fa-users"></i> Afiliados</a></li>
+        <li><a href="contato.html"><i class="fas fa-envelope"></i> Contato</a></li>
       </ul>
     </nav>
   </header>
 
+  <!-- Conteúdo Principal -->
   <main>
+    <!-- Introdução Afiliados -->
     <section class="afiliados-intro">
-      <h1>💸 Torne-se um Afiliado de Sucesso! 🚀</h1>
-      <p>Já pensou em ganhar uma renda extra ou até mesmo transformar isso em sua principal fonte de renda? Nossa plataforma de cursos acessíveis está abrindo as portas para você se tornar um afiliado de sucesso, ajudando a divulgar nossos cursos e ganhando comissões incríveis por cada venda realizada. 🌟</p>
-      <a href="https://wa.me/31975380600" class="btn-consultor">📞 Clique aqui e fale com nosso consultor no WhatsApp</a>
+      <h1><i class="fas fa-chart-line"></i> Torne-se um Afiliado de Sucesso! 🚀</h1>
+      <p>Transforme sua vida com a nossa oportunidade de afiliados! Divulgue nossos cursos acessíveis e receba comissões incríveis a cada venda realizada. Juntos, podemos alcançar novos patamares. 🌟</p>
+      <a href="https://wa.me/31975380600" class="btn-consultor"><i class="fas fa-phone"></i> Fale com nosso consultor no WhatsApp</a>
     </section>
 
+    <!-- Como Funciona -->
     <section class="como-funciona">
-      <h2>Como Funciona?</h2>
+      <h2><i class="fas fa-question-circle"></i> Como Funciona?</h2>
       <ol>
-        <li>
-          <strong>1. Tenha uma conta na Hotmart:</strong>  
-          A Hotmart gerencia as vendas e pagamentos dos nossos cursos. Se precisar de ajuda,  
-          <a href="https://wa.me/31975380600" class="btn-consultor">📞 fale com nosso consultor</a>.
+        <li><strong>1. Tenha uma conta na Hotmart:</strong>  
+          A Hotmart é a plataforma que gerencia nossas vendas. Se precisar de ajuda, <a href="https://wa.me/31975380600" class="btn-consultor"><i class="fas fa-phone"></i> fale com nosso consultor</a>.
         </li>
-        <li>
-          <strong>2. Inscreva-se como Afiliado de Nossos Cursos:</strong>  
-          Após criar sua conta na Hotmart, escolha os cursos que deseja promover. Você pode se inscrever em um ou mais cursos para diversificar seus horários.
+        <li><strong>2. Inscreva-se como Afiliado:</strong>  
+          Escolha os cursos que deseja divulgar e diversifique suas estratégias para alcançar mais pessoas.
         </li>
-        <li>
-          <strong>3. Indique os Cursos:</strong>  
-          Divulgue seu link exclusivo para amigos, redes sociais e contatos. Cada venda realizada gera uma comissão direta para você! 💰
+        <li><strong>3. Indique os Cursos:</strong>  
+          Compartilhe seu link exclusivo nas redes sociais e entre amigos. A cada venda, você ganha! 💰
         </li>
       </ol>
     </section>
 
+    <!-- Benefícios -->
     <section class="beneficios">
-      <h2>Benefícios de Ser Nosso Afiliado</h2>
+      <h2><i class="fas fa-gift"></i> Benefícios de Ser Nosso Afiliado</h2>
       <ul>
-        <li>💵 Ganhe comissões atrativas por cada venda realizada.</li>
-        <li>📚 Receba materiais de divulgação prontos: banners, textos e vídeos.</li>
-        <li>🕒 Trabalhe no seu ritmo, com total flexibilidade.</li>
-        <li>🚀 Participe de um grupo exclusivo no WhatsApp com dicas e suporte constante.</li>
+        <li><i class="fas fa-money-bill-wave"></i> Comissões atrativas por venda.</li>
+        <li><i class="fas fa-file-alt"></i> Materiais de divulgação prontos.</li>
+        <li><i class="fas fa-clock"></i> Flexibilidade total para trabalhar.</li>
+        <li><i class="fas fa-comments"></i> Grupo exclusivo no WhatsApp com suporte.</li>
       </ul>
-      <a href="https://chat.whatsapp.com/SEULINKDOGRUPO" class="btn-grupo">👥 Entre no nosso grupo de apoio no WhatsApp</a>
+      <a href="https://chat.whatsapp.com/SEULINKDOGRUPO" class="btn-grupo"><i class="fas fa-users"></i> Entre no grupo de apoio no WhatsApp</a>
     </section>
 
+    <!-- Materiais -->
     <section class="materiais">
-      <h2>Materiais de Divulgação</h2>
-      <p>Queremos que você tenha sucesso! Por isso, oferecemos diversos materiais prontos para facilitar a divulgação:</p>
+      <h2><i class="fas fa-tools"></i> Materiais de Divulgação</h2>
+      <p>Para garantir o seu sucesso, disponibilizamos:</p>
       <ul>
-        <li>🎨 Banners atrativos para redes sociais.</li>
-        <li>📹 Vídeos promocionais dinâmicos.</li>
-        <li>📝 Textos prontos e otimizados para engajamento.</li>
+        <li><i class="fas fa-paint-brush"></i> Banners prontos para redes sociais.</li>
+        <li><i class="fas fa-video"></i> Vídeos promocionais dinâmicos.</li>
+        <li><i class="fas fa-edit"></i> Textos otimizados para engajamento.</li>
       </ul>
     </section>
 
+    <!-- Comece Agora -->
     <section class="comece-agora">
-      <h2>Comece Agora Mesmo!</h2>
-      <p>1. Crie sua conta na Hotmart.</p>
-      <p>2. Inscreva-se como afiliado e escolha os cursos que deseja divulgar.</p>
-      <p>3. Comece a divulgar e entre no nosso grupo exclusivo para receber suporte personalizado.</p>
-      <a href="https://wa.me/31975380600" class="btn-consultor">📞 Fale agora com nosso consultor no WhatsApp</a>
-      <a href="https://chat.whatsapp.com/SEULINKDOGRUPO" class="btn-grupo">👥 Entre no nosso grupo de apoio no WhatsApp</a>
+      <h2><i class="fas fa-rocket"></i> Comece Agora Mesmo!</h2>
+      <p><i class="fas fa-sign-in-alt"></i> Crie sua conta na Hotmart e escolha os cursos que deseja divulgar.</p>
+      <p><i class="fas fa-share-alt"></i> Divulgue seu link e participe do grupo de apoio no WhatsApp.</p>
+      <div class="cta-buttons">
+        <a href="https://wa.me/31975380600" class="btn-consultor"><i class="fas fa-phone"></i> Fale com nosso consultor</a>
+        <a href="https://chat.whatsapp.com/SEULINKDOGRUPO" class="btn-grupo"><i class="fas fa-users"></i> Entre no grupo de apoio</a>
+      </div>
     </section>
   </main>
 
+  <!-- Rodapé -->
   <footer class="site-footer">
-    <p>Siga-nos nas redes sociais:</p>
+    <p><i class="fas fa-share-alt-square"></i> Siga-nos:</p>
     <div class="social-links">
-      <a href="https://instagram.com" target="_blank">Instagram</a>
-      <a href="https://tiktok.com" target="_blank">TikTok</a>
-      <a href="https://youtube.com" target="_blank">YouTube</a>
+      <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+      <a href="https://tiktok.com" target="_blank"><i class="fab fa-tiktok"></i> TikTok</a>
+      <a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
     </div>
     <p>© 2024 Cursos Acessíveis. Todos os direitos reservados.</p>
   </footer>
