--- a/cursos.html
+++ b/cursos.html
@@ -19,6 +19,17 @@
     </nav>
   </header>
 
+  <!-- Barra de Pesquisa -->
+<section class="pesquisa">
+  <input type="text" id="pesquisar" placeholder="Pesquise cursos..." onkeyup="pesquisarCursos()" />
+  <button onclick="pesquisarCursos()">Buscar</button>
+</section>
+
+<!-- Resultados da Pesquisa (Aqui vamos exibir os cursos filtrados) -->
+<section id="resultados-cursos">
+  <!-- Os resultados aparecerão aqui -->
+</section>
+
   <!-- Conteúdo Principal -->
   <main>
     <h1>🎓 Conheça Nossos Cursos Disponíveis</h1>
