--- a/cursos/producao_e_edicao_de_videos_para_deficientes_visuais/index.html
+++ b/cursos/producao_e_edicao_de_videos_para_deficientes_visuais/index.html
@@ -5,21 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Curso de Produção e Edição de Vídeos para Deficientes Visuais. Aprenda a criar vídeos incríveis de forma acessível e prática!">
   <title>Produção e Edição de Vídeos para Deficientes Visuais</title>
-  <link rel="stylesheet" href="../../assets/css/style.css"> <!-- CSS principal -->
-  <link rel="stylesheet" href="style.css"> <!-- CSS específico -->
+  
+  <!-- CSS Principal -->
+  <link rel="stylesheet" href="../../assets/css/style.css">
+  
+  <!-- CSS Específico -->
+  <link rel="stylesheet" href="style.css">
+  
+  <!-- Biblioteca Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
   <!-- Cabeçalho -->
   <header>
     <nav>
       <ul>
-        <li><a href="../../index.html">Home</a></li>
-        <li><a href="../../cursos.html">Cursos</a></li>
-        <li><a href="../../afiliados.html">Afiliados</a></li>
-        <li><a href="../../contato.html">Contato</a></li>
+        <li><a href="../../index.html"><i class="fas fa-home"></i> Home</a></li>
+        <li><a href="../../cursos.html"><i class="fas fa-book"></i> Cursos</a></li>
+        <li><a href="../../afiliados.html"><i class="fas fa-users"></i> Afiliados</a></li>
+        <li><a href="../../contato.html"><i class="fas fa-envelope"></i> Contato</a></li>
       </ul>
     </nav>
   </header>
+
+  <!-- Banner -->
+  <section class="banner">
+    <img src="banner.jpg" alt="Banner do curso de Produção e Edição de Vídeos para Deficientes Visuais" class="banner-img">
+  </section>
 
   <!-- Conteúdo Principal -->
   <main>
@@ -28,71 +40,92 @@
 
     <!-- Requisitos -->
     <section class="requisitos">
-      <h2>📌 Requisitos para o curso</h2>
-      <p>👉 É indispensável ter um computador com sistema operacional Windows.</p>
-      <p>👉 Você precisa saber o básico de informática, como navegar na internet e usar programas simples.</p>
+      <h2><i class="fas fa-check-circle"></i> 📌 Requisitos para o curso</h2>
+      <p><i class="fas fa-desktop"></i> 👉 É indispensável ter um computador com sistema operacional Windows.</p>
+      <p><i class="fas fa-laptop-code"></i> 👉 Você precisa saber o básico de informática, como navegar na internet e usar programas simples.</p>
     </section>
 
     <!-- Botão Comprar no Início -->
     <div class="btn-container">
-      <a href="https://pay.hotmart.com/R95971190U?checkoutMode=2" class="btn btn-compra" target="_blank">🛒 Adquirir Agora</a>
+      <a href="https://pay.hotmart.com/R95971190U?checkoutMode=2" class="btn btn-compra" target="_blank"><i class="fas fa-shopping-cart"></i> 🛒 Adquirir Agora</a>
     </div>
 
     <!-- Descrição do Curso -->
     <section class="descricao-curso">
       <h2>📚 O que você vai aprender?</h2>
-      <p>Este curso é completo e prático! Você aprenderá:</p>
+      <p>Este curso é completo, prático e totalmente acessível! Você aprenderá:</p>
       <ul>
-        <li>✨ Planejar e organizar seus vídeos de forma estratégica;</li>
-        <li>📜 Contar histórias cativantes para prender a atenção de quem assiste;</li>
-        <li>💻 Usar ferramentas adaptadas que tornam todo o processo acessível;</li>
-        <li>🎥 Técnicas para gravar vídeos de qualidade, sozinho ou com ajuda;</li>
-        <li>🗣️ Criar narrações profissionais utilizando tecnologia adaptada;</li>
-        <li>🎨 Usar inteligência artificial para criar e melhorar vídeos;</li>
-        <li>✂️ Editar e publicar vídeos nas redes sociais de maneira prática.</li>
+        <li>✨ Desenvolver <strong>roteiros estratégicos</strong> para criar vídeos impactantes e organizados;</li>
+        <li>👥 Identificar e entender o <strong>público-alvo</strong>, definindo os melhores formatos e tipos de vídeos;</li>
+        <li>💻 Instalar e configurar as <strong>ferramentas necessárias</strong>, com explicações detalhadas sobre cada uma delas;</li>
+        <li>🎥 Gravar vídeos com técnicas acessíveis, incluindo gravações em <strong>primeira pessoa</strong> e dicas práticas para:
+          <ul>
+            <li>✅ Posicionamento de câmera;</li>
+            <li>✅ Escolha de <strong>cores de roupas</strong> e fundos adequados para o cenário;</li>
+          </ul>
+        </li>
+        <li>🗣️ Criar narrações de duas maneiras:
+          <ul>
+            <li>🎙️ Feitas pela <strong>própria pessoa</strong>, com orientação para obter um áudio claro e profissional;</li>
+            <li>🤖 Usando <strong>inteligência artificial</strong>, explorando diversas opções, com vantagens e desvantagens de cada abordagem;</li>
+          </ul>
+        </li>
+        <li>🎙️ Escolher e usar <strong>equipamentos essenciais</strong>, como microfones, para melhorar a qualidade do áudio;</li>
+        <li>🖼️ Trabalhar com <strong>imagens</strong>, desde a busca em bancos sem direitos autorais até a explicação sobre <strong>direitos autorais</strong> e sua importância;</li>
+        <li>🧠 Criar e descrever imagens usando <strong>inteligência artificial</strong>, com foco em acessibilidade e originalidade;</li>
+        <li>✂️ Editar vídeos de forma prática e publicar no YouTube, aprendendo passo a passo:
+          <ul>
+            <li>🎬 Gerar <strong>cenas em movimento</strong> ou até mesmo vídeos completos usando IA;</li>
+            <li>✅ Estruturar o vídeo para maximizar o impacto e engajamento;</li>
+          </ul>
+        </li>
+        <li>🚀 E muito mais para te tornar independente e confiante na criação de conteúdos de alta qualidade!</li>
       </ul>
-      <p>Se você acha que é difícil, saiba que tudo foi pensado para tornar o aprendizado fácil e acessível, mesmo que você nunca tenha trabalhado com vídeos antes.</p>
+          <p>Se você acha que é difícil, saiba que tudo foi pensado para tornar o aprendizado fácil e acessível, mesmo que você nunca tenha trabalhado com vídeos antes.</p>
+
+      <!-- Informações Adicionais -->
+      <p><i class="fas fa-clock"></i> <strong>Mais de 18 horas de conteúdo</strong> e <strong>mais de 40 aulas</strong> para você dominar a produção e edição de vídeos.</p>
 
       <!-- Botão Comprar no Meio -->
       <div class="btn-container">
-        <a href="https://pay.hotmart.com/R95971190U?checkoutMode=2" class="btn btn-compra" target="_blank">🛒 Adquirir Agora</a>
+        <a href="https://pay.hotmart.com/R95971190U?checkoutMode=2" class="btn btn-compra" target="_blank"><i class="fas fa-shopping-cart"></i> 🛒 Adquirir Agora</a>
       </div>
     </section>
 
     <!-- Benefícios -->
     <section class="beneficios">
-      <h2>✅ Por que escolher este curso?</h2>
-      <p>👉 Porque ele foi criado especialmente para atender às necessidades de quem precisa de acessibilidade.</p>
-      <p>👉 O conteúdo é prático, direto ao ponto e adaptado para pessoas com deficiência visual.</p>
-      <p>👉 Garantimos sua satisfação: você tem <strong>7 dias</strong> para pedir reembolso caso não goste do curso.</p>
-      <p>👉 Você recebe um <strong>certificado oficial</strong> ao final, que pode ser usado no seu currículo.</p>
-      <p>👉 Tenha autonomia para criar vídeos que impactem positivamente o mundo!</p>
+      <h2><i class="fas fa-thumbs-up"></i> ✅ Por que escolher este curso?</h2>
+      <p><i class="fas fa-handshake"></i> 👉 Porque ele foi criado especialmente para atender às necessidades de quem precisa de acessibilidade.</p>
+      <p><i class="fas fa-clipboard-check"></i> 👉 O conteúdo é prático, direto ao ponto e adaptado para pessoas com deficiência visual.</p>
+      <p><i class="fas fa-undo"></i> 👉 Garantimos sua satisfação: você tem <strong>7 dias</strong> para pedir reembolso caso não goste do curso.</p>
+      <p><i class="fas fa-certificate"></i> 👉 Você recebe um <strong>certificado oficial</strong> ao final, que pode ser usado no seu currículo.</p>
+      <p><i class="fas fa-user-check"></i> 👉 Tenha autonomia para criar vídeos que impactem positivamente o mundo!</p>
     </section>
 
     <!-- Vídeo Explicativo -->
     <section class="video-curso">
-      <h2>🎞️ Veja como começar!</h2>
+      <h2><i class="fas fa-play-circle"></i> 🎞️ Veja como começar!</h2>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/01Lynn3MJBc" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
       <p>Assista ao vídeo e descubra como você também pode criar vídeos incríveis!</p>
     </section>
 
     <!-- Botão Comprar no Fim -->
     <div class="btn-container">
-      <a href="https://pay.hotmart.com/R95971190U?checkoutMode=2" class="btn btn-compra" target="_blank">🛒 Adquirir Agora</a>
+      <a href="https://pay.hotmart.com/R95971190U?checkoutMode=2" class="btn btn-compra" target="_blank"><i class="fas fa-shopping-cart"></i> 🛒 Adquirir Agora</a>
     </div>
 
     <!-- Link para Afiliados -->
     <section class="afiliados">
-      <h2>💼 Torne-se um afiliado!</h2>
+      <h2><i class="fas fa-hand-holding-usd"></i> 💼 Torne-se um afiliado!</h2>
       <p>👉 Se você deseja lucrar promovendo este curso, temos uma oportunidade para você:</p>
-      <a href="https://app-vlc.hotmart.com/affiliate-recruiting/view/0643C95971211" class="btn btn-afiliado" target="_blank">🔗 Clique aqui para ser afiliado!</a>
+      <a href="https://app-vlc.hotmart.com/affiliate-recruiting/view/0643C95971211" class="btn btn-afiliado" target="_blank"><i class="fas fa-link"></i> 🔗 Clique aqui para ser afiliado!</a>
     </section>
 
     <!-- Contato -->
     <section class="contato">
-      <h2>❓ Tem dúvidas? Fale com a gente!</h2>
+      <h2><i class="fas fa-question-circle"></i> ❓ Tem dúvidas? Fale com a gente!</h2>
       <a href="https://wa.me/31975380600?text=Oi%2C%20gostaria%20de%20saber%20mais%20sobre%20o%20curso%20edi%C3%A7%C3%A3o%20e%20produ%C3%A7%C3%A3o%20de%20v%C3%ADdeos%20para%20deficientes%20visuais." class="btn btn-contato" target="_blank">
-        📲 Clique aqui para falar no WhatsApp!
+        <i class="fab fa-whatsapp"></i> 📲 Clique aqui para falar no WhatsApp!
       </a>
     </section>
   </main>
@@ -103,13 +136,13 @@
       <p>Siga-nos nas redes sociais:</p>
       <div class="social-links">
         <a href="https://instagram.com" target="_blank" aria-label="Instagram">
-          <img src="../../assets/icons/instagram-icon.png" alt="Instagram">
+          <i class="fab fa-instagram"></i>
         </a>
         <a href="https://tiktok.com" target="_blank" aria-label="TikTok">
-          <img src="../../assets/icons/tiktok-icon.png" alt="TikTok">
+          <i class="fab fa-tiktok"></i>
         </a>
         <a href="https://youtube.com" target="_blank" aria-label="YouTube">
-          <img src="../../assets/icons/youtube-icon.png" alt="YouTube">
+          <i class="fab fa-youtube"></i>
         </a>
       </div>
       <p class="copyright">© 2024 Cursos Acessíveis. Todos os direitos reservados.</p>
