--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
     </nav>
   </header>
 
-  <!-- Barra de Pesquisa -->
-  <section class="pesquisa">
-    <input type="text" id="pesquisar" placeholder="Pesquise cursos..." onkeyup="pesquisarCursos()">
-    <button onclick="pesquisarCursos()">Buscar</button>
-  </section>
+<!-- Barra de Pesquisa -->
+<section class="pesquisa">
+  <input type="text" id="pesquisar" placeholder="Pesquise cursos..." onkeyup="pesquisarCursos()" />
+  <button onclick="pesquisarCursos()">Buscar</button>
+</section>
 
+<!-- Resultados da Pesquisa (Aqui vamos exibir os cursos filtrados) -->
+<section id="resultados-cursos">
+  <!-- Os resultados aparecerão aqui -->
+</section>
   <!-- Conteúdo Principal -->
   <main>
     <h1>Bem-vindo à nossa plataforma de cursos acessíveis e transformadores! 🎓</h1>
