--- a/index.html
+++ b/index.html
@@ -5,30 +5,65 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Plataforma de Cursos Acessíveis</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <!-- Inclusão do FontAwesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <style>
+    /* Estilo para o contador de visitas */
+    #contador-visitas {
+      text-align: center;
+      font-size: 1rem;
+      margin: 10px 0;
+      color: #333;
+    }
+
+    /* Estilo para o rodapé */
+    .site-footer {
+      text-align: center;
+      margin-top: 20px;
+      padding: 10px;
+      background: #f1f1f1;
+    }
+    .site-footer .social-links a {
+      margin: 0 10px;
+      color: #333;
+      text-decoration: none;
+    }
+    .site-footer .social-links a:hover {
+      text-decoration: underline;
+    }
+    .site-footer p {
+      margin-top: 15px;
+      color: #666;
+    }
+  </style>
 </head>
 <body>
-  <!-- Menu Persistente -->
-  <header role="banner">
+  <!-- Contador de Visitas -->
+  <div id="contador-visitas"></div>
+
+  <!-- Menu -->
+  <header>
     <nav>
-      <ul class="menu">
-        <li><a href="index.html" aria-label="Página inicial">Home</a></li>
-        <li><a href="cursos.html" aria-label="Cursos disponíveis">Cursos</a></li>
-        <li><a href="afiliados.html" aria-label="Programa de Afiliados">Afiliados</a></li>
-        <li><a href="contato.html" aria-label="Página de Contato">Contato</a></li>
+      <ul>
+        <li><a href="index.html"><i class="fas fa-home"></i> Início</a></li>
+        <li><a href="cursos.html"><i class="fas fa-book"></i> Cursos</a></li>
+        <li><a href="afiliados.html"><i class="fas fa-users"></i> Afiliados</a></li>
+        <li><a href="contato.html"><i class="fas fa-envelope"></i> Contato</a></li>
       </ul>
     </nav>
   </header>
 
-<!-- Barra de Pesquisa -->
-<section class="pesquisa">
-  <input type="text" id="pesquisar" placeholder="Pesquise cursos..." onkeyup="pesquisarCursos()" />
-  <button onclick="pesquisarCursos()">Buscar</button>
-</section>
+  <!-- Barra de Pesquisa -->
+  <section class="pesquisa">
+    <input type="text" id="pesquisar" placeholder="Pesquise cursos..." onkeyup="pesquisarCursos()" />
+    <button onclick="pesquisarCursos()">Buscar</button>
+  </section>
 
-<!-- Resultados da Pesquisa (Aqui vamos exibir os cursos filtrados) -->
-<section id="resultados-cursos">
-  <!-- Os resultados aparecerão aqui -->
-</section>
+  <!-- Resultados da Pesquisa -->
+  <section id="resultados-cursos">
+    <!-- Os resultados aparecerão aqui -->
+  </section>
+
   <!-- Conteúdo Principal -->
   <main>
     <h1>Bem-vindo à nossa plataforma de cursos acessíveis e transformadores! 🎓</h1>
@@ -52,30 +87,48 @@
     <!-- Seção de Afiliados -->
     <section class="afiliados">
       <h2>💸 Ganhe Dinheiro Compartilhando Nossos Cursos!</h2>
-      <p>🤝 Torne-se um afiliado e comece a gerar renda indicando nossos cursos. Receba comissões por cada venda realizada!</p>
-      <p><a href="pagina-de-afiliados.html" class="btn-afiliado">Saiba mais e comece agora 🚀</a></p>
+      <p>🤝 Ser nosso afiliado é fácil, gratuito e muito vantajoso. Não é necessário investir nada ou adquirir cursos para participar. Basta se inscrever como afiliado e começar a compartilhar os links dos nossos cursos com sua rede de contatos.</p>
+      <p>🤑 Cada venda realizada através do seu link exclusivo gera uma comissão diretamente para você. É uma oportunidade de ganhar dinheiro sem complicações, apenas indicando cursos que transformam vidas.</p>
+      <p>🚀 Benefícios:</p>
+      <ul>
+        <li>✅ Inscrição 100% gratuita.</li>
+        <li>✅ Comissões generosas por cada venda.</li>
+        <li>✅ Suporte para ajudá-lo a alcançar os melhores resultados.</li>
+        <li>✅ Material promocional para facilitar suas divulgações.</li>
+      </ul>
+      <p>🎯 Não perca tempo, clique no botão abaixo e comece agora mesmo a gerar sua renda extra de forma prática e eficiente:</p>
+      <a href="afiliados.html" class="btn-afiliado"><i class="fas fa-user-plus"></i> Seja um Afiliado Agora!</a>
     </section>
   </main>
 
   <!-- Rodapé -->
   <footer class="site-footer">
-    <div class="footer-container">
-      <p>Siga-nos nas redes sociais:</p>
-      <div class="social-links">
-        <a href="https://instagram.com" target="_blank" aria-label="Instagram">
-          <img src="assets/icons/instagram-icon.png" alt="Instagram">
-        </a>
-        <a href="https://tiktok.com" target="_blank" aria-label="TikTok">
-          <img src="assets/icons/tiktok-icon.png" alt="TikTok">
-        </a>
-        <a href="https://youtube.com" target="_blank" aria-label="YouTube">
-          <img src="assets/icons/youtube-icon.png" alt="YouTube">
-        </a>
-      </div>
-      <p class="copyright">© <span id="ano-atual"></span> Cursos Acessíveis. Todos os direitos reservados.</p>
+    <div class="social-links">
+      <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
+      <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
+      <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
     </div>
+    <p>&copy; 2024 - Sua Empresa</p>
   </footer>
 
+  <!-- Script para o contador de visitas -->
+  <script>
+    // Recupera o número de visitas do localStorage
+    let visitas = localStorage.getItem('contador-visitas') || 0;
+
+    // Incrementa o número de visitas
+    visitas++;
+
+    // Salva o número atualizado no localStorage
+    localStorage.setItem('contador-visitas', visitas);
+
+    // Exibe o contador no site
+    document.addEventListener('DOMContentLoaded', () => {
+      document.getElementById('contador-visitas').textContent = `Visitas: ${visitas}`;
+    });
+  </script>
+
+  <!-- Script principal -->
   <script src="assets/js/main.js"></script>
 </body>
 </html>
